--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "dev:linux": "export NODE_ENV=dev && nodemon server.js",
     "dev:windows": "SET NODE_ENV=dev && nodemon server.js"
   },
-  "author": "Azad Mamun",
+  "author": "NEXTLMS",
   "license": "ISC",
   "dependencies": {
     "connect-flash": "^0.1.1",
